add user feature module
